# BLESmartLock

./: CMakeLists.txt  Guide.docx  ReadMe  Smart Lock Complete System.docx  SmartLock application side.drawio  ToDo Task.txt  customIntegration.overlay  prj.conf  ~$art Lock Complete System.docx
boards/: customIntegration.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/aht20/: CMakeLists.txt  Kconfig  aht20.c
dts/bindings/: zephyr,aht20.yaml  zephyr,mcapp.yaml  zephyr,rtcmcp7940.yaml
modules/: CMakeLists.txt  Kconfig
modules/RTCmcp7940/: CMakeLists.txt  Kconfig  RTCmcp7940.c  RTCmcp7940.h
modules/aht20/: CMakeLists.txt  Kconfig  aht20.c
src/: app_defines.h  main.c
src/BLE/: BLEapp.c  BLEapp.h
src/RTC/: rtc.h
src/System/: bib.c  bib.h  sys_flash.c  sys_flash.h
src/crypto/: cryptoapp.c  cryptoapp.h
src/motorcontrol/: mcapp.c  mcapp.h
